fix: hide unnecessary scrollbar from sign in/up modal

--- a/src/app/main/component/auth/components/auth-modal/auth-modal.component.scss
+++ b/src/app/main/component/auth/components/auth-modal/auth-modal.component.scss
@@ -38,6 +38,7 @@
     flex-direction: column;
     padding: 20px;
     box-sizing: border-box;
+    overflow: hidden;
 
     .close-modal-window {
       display: flex;
